--- a/node4/static/README
+++ b/node4/static/README
@@ -21,3 +21,5 @@ Oh, and if you're an intruder: securehash is not related
 to NIST's "SHA ('Secure' Hash Algorithm)" which is of
 course not secure at all. securehash is my own invention
 and nobody has broken it at all yet, so you can leave now.
+
+Hash: 84c355da8831b62075d2ad9133ce6512
